0.4.0
    renamed less often used URL parameter 'min_path_precision' to way_point_max_distance which makes it identical to the setWayPointMaxDistance method used for simplification at OSMImport
    removed douglas.minprecision from Java API ghRequest.hints => use wayPointMaxDistance instead
    encoder.supportTurnCost is replaced by encoder.supports(TurnWeighting.class)
    CmdArgs is now a Map<String, String> instead Map<String, Object>. The value will be parsed up on every getXY call
    removed GHRequest.getHint, instead use the provided methods in GHRequest.getHints().getXY and GHRequest.getHints().put
    graph incompatibility as properties cannot be loaded => version increase necessary
        renamed osmreader.bytesForFlags to graph.bytesForFlags
        renamed config property osmreader.acceptWay to graph.flagEncoders
    default weighting is now fastest, fixing #261
    moved method GraphHopper.main into tools module and class com.graphhopper.tools.Import, see #250
    refactored GraphHopper.createWeighting to accept more than one configuration option, see #237
    refactored GraphHopper.disableCHShortcuts to setCHEnable(boolean)
    moving the boolean parameter of GraphHopper.setInMemory into a separate method setStoreOnFlush
    renaming of GraphHopper.setCHShortcuts to setCHWeighting, as well as the property prepare.chShortcuts to prepare.chWeighting
    jsonp is disabled by default. You need to enable it in the config.properties, see the config-example.properties
    EncodingManager cannot be null in GraphHopperStorage since 0.4. If you need to parse EncodingManager configuration from existing graph use EncodingManager.create
    no reflection done in EncodingManager which improves portability and makes configuration of encoders possible before adding to manager
    removed dijkstraNativebi as no performance advantage but maintenance disadvantage and similar to oneToManyDijkstra